kubernetes/web-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-deployment
  namespace: web-app
  labels:
    app: web-app-webgoat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app-webgoat
  template:
    metadata:
      labels:
        app: web-app-webgoat
    spec:
      serviceAccountName: aws-load-balancer-controller
      containers:
      - name: web-app
        image: webgoat/webgoat
        ports:
        - name: http
          containerPort: 8080
        imagePullPolicy: IfNotPresent
