kubernetes/web-app-nlb.yml
apiVersion: v1
kind: Service
metadata:
  name: web-app-nlb-service
  namespace: web-app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: LoadBalancer
  selector:
    app: web-app-webgoat
