kubernetes/web-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
  namespace: web-app
  labels:
    app: web-app-webgoat
spec:
  type: ClusterIP
  selector:
    app: web-app-webgoat
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
