kubernetes/web-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${KUBE_NAMESPACE}-${APPLICATION_NAME}-ingress
  namespace: ${KUBE_NAMESPACE}
  labels:
    app: ${KUBE_NAMESPACE}-${APPLICATION_NAME}-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 8080}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /WebGoat
            pathType: Prefix
            backend:
              service:
                name: "${KUBE_NAMESPACE}-${APPLICATION_NAME}-service"
                port:
                  number: 8080
